--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,30 @@ body::after {
   background-color: #eef3f6; }
 
 header {
-  padding: 2em 1em 1em 2em;
-  padding-top: 2em; }
+  padding: 2em 1em 1em 2em; }
+  @media (min-width: 600px) {
+    header {
+      padding: 3em 3em 1em 2em;
+      margin-bottom: 2.2em; } }
   header nav {
     float: right; }
+    header nav .desktop-nav {
+      text-transform: uppercase;
+      font-family: 'Barlow Condensed', sans-serif; }
+      @media (max-width: 375px) {
+        header nav .desktop-nav {
+          display: none; } }
+      header nav .desktop-nav ul {
+        list-style: none; }
+        header nav .desktop-nav ul li {
+          padding: .5em;
+          font-weight: 700;
+          display: inline-block; }
+          header nav .desktop-nav ul li:last-child {
+            color: #5b5f71; }
+    @media (min-width: 600px) {
+      header nav .mobile-dropDown {
+        display: none; } }
     header nav .mobile-dropDown button.mobile-nav {
       border: none;
       width: 2.5rem;
@@ -51,12 +71,16 @@ header {
   display: flex;
   flex-wrap: wrap-reverse; }
   @media (max-width: 375px) {
+    .hero {
+      margin-bottom: 2em; } }
+  @media (max-width: 375px) {
     .hero .hero-left {
       width: 100%;
       padding: 1em 1em 1em 2em; } }
   @media (min-width: 600px) {
     .hero .hero-left {
-      flex: 1 1; } }
+      flex: 1 1;
+      padding: 1em 1em 1em 2em; } }
   .hero .hero-left ul.tags {
     list-style: none;
     font-family: 'Barlow Condensed', sans-serif;
@@ -93,17 +117,30 @@ header {
     margin-left: .3em;
     background-color: #eef3f6;
     color: #5b5f71; }
-  @media (max-width: 375px) {
-    .hero .hero-right {
-      width: 100%;
-      padding: 1em 1em 1em 1em; } }
-  @media (min-width: 600px) {
-    .hero .hero-right {
-      flex: 1 1; } }
-  .hero .hero-right img {
-    width: 100%; }
+  .hero .hero-right {
+    background-image: url(/images/illustration-devices.svg);
+    background-size: auto 100%;
+    background-repeat: no-repeat; }
+    @media (max-width: 375px) {
+      .hero .hero-right {
+        width: 100%;
+        min-height: 55vh;
+        padding: 1em 1em 1em 1em; } }
+    @media (min-width: 600px) {
+      .hero .hero-right {
+        flex: 1 1; } }
+    .hero .hero-right img {
+      width: 100%; }
 
 footer {
-  margin-top: 1em; }
+  position: fixed;
+  bottom: 0;
+  left: 25%;
+  text-align: center;
+  display: block;
+  padding: 1em; }
+  @media (max-width: 375px) {
+    footer {
+      left: 5%; } }
 
 /*# sourceMappingURL=main.css.map */
