--- a/css/main.scss
+++ b/css/main.scss
@@ -155,6 +155,7 @@ header {
     @include for-phone() {
       width: 100%;
       padding: 1em 1em 1em 2em;
+      margin-top: 2.5em;
     }
     
     @include for-tablet-portrait-up() {
@@ -201,7 +202,7 @@ header {
     }
 
     button {
-      padding: .5em;
+      padding: .4em;
       border-radius: 7px;
       border: none;
       outline: none;
@@ -211,10 +212,13 @@ header {
     button.demo-btn {
       background-color: color(callToActionBtn);
       color: white;
+      // font-size: .8rem;
+      font-weight: 700;
     }
-
+    
     button.preview-btn {
-      margin-left: .3em;
+      // font-size: .7rem;
+      margin-left: .17em;
       background-color: color(bgNavRight);
       color: color(navActiveState);
     }
@@ -230,6 +234,7 @@ header {
       width: 100%;
       min-height: 55vh;
       padding: 1em 1em 1em 1em;
+      margin-top: 1.5em;
     }
 
     @include for-tablet-portrait-up() {
@@ -243,14 +248,5 @@ header {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 25%;
-  text-align: center;
-  display: block;
   padding: 1em;
-  
-  @include for-phone() {
-    left: 5%;
-  }
 }
