--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,10 @@ header {
       @include for-phone() {
         display: none;
       }
+      
+      @include for-phone-up() {
+        display: none;
+      }
 
       ul {
         list-style: none;
@@ -158,6 +162,12 @@ header {
       margin-top: 2.5em;
     }
     
+    @include for-phone-up() {
+      width: 100%;
+      padding: 1em 1em 1em 2em;
+      margin-top: 2.5em;
+    }
+    
     @include for-tablet-portrait-up() {
       flex: 1 1;
       padding: 1em 1em 1em 2em;
@@ -232,14 +242,21 @@ header {
 
     @include for-phone() {
       width: 100%;
-      min-height: 55vh;
+      min-height: 65vh;
       padding: 1em 1em 1em 1em;
       margin-top: 1.5em;
+    }
+    
+    @include for-phone-up() {
+      min-height: 55vh;
+      margin-top: 1.5em;
+      width: 100%;
     }
 
     @include for-tablet-portrait-up() {
       flex: 1 1;
     }
+
 
     img{
       width: 100%;
