--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ header {
       @media (min-width: 376px) {
         header nav .desktop-nav {
           display: none; } }
+      @media (min-width: 900px) {
+        header nav .desktop-nav {
+          display: block; } }
+      @media (min-width: 600px) {
+        header nav .desktop-nav {
+          display: block; } }
       header nav .desktop-nav ul {
         list-style: none; }
         header nav .desktop-nav ul li {
