--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ header {
       margin-bottom: 2em; } }
   @media (min-width: 1200px) {
     header {
-      padding: 3em 3em 1em 4em;
+      padding: 3em 3em 1em 6em;
       margin-bottom: 4em; } }
   header nav {
     float: right; }
@@ -113,6 +113,9 @@ header {
   @media (min-width: 900px) {
     .hero .hero-left {
       padding: 1em 1em 1em 3em; } }
+  @media (min-width: 1200px) {
+    .hero .hero-left {
+      padding: 1em 1em 1em 6em; } }
   .hero .hero-left ul.tags {
     list-style: none;
     font-family: 'Barlow Condensed', sans-serif;
@@ -142,6 +145,9 @@ header {
     border: none;
     outline: none;
     text-transform: uppercase; }
+    @media (min-width: 1200px) {
+      .hero .hero-left button {
+        padding: 1em; } }
   .hero .hero-left button.demo-btn {
     background-color: #ff5c5c;
     color: white;
@@ -150,6 +156,9 @@ header {
     margin-left: .17em;
     background-color: #eef3f6;
     color: #5b5f71; }
+    @media (min-width: 1200px) {
+      .hero .hero-left button.preview-btn {
+        margin-left: 1em; } }
   .hero .hero-right {
     background-image: url(/images/illustration-devices.svg);
     background-size: auto 100%;
